<resources>
    <string name="url">http://www.weather-jy.cn:8096/ztq_tj_jc/service.do</string>
    <string name="url_debug">http://www.weather-jy.cn:8096/ztq30_fj_jc/service.do</string>
    <string name="file_download_url">http://220.243.129.159:8081/web/</string>
    <string name="shzs">http://220.243.129.159:8081/web/tjfile/ico/</string>
    <string name="air_pollution">http://220.243.129.159:8081/web/tjfile/picture/1806/</string>
    <string name="use_asset_db">0</string>
    <string name="app_name">天津惠民</string>
    <string name="version"> </string>
    <string name="and_app">&#160;@天津惠民</string>
    <string name="main">首页</string>
    <string name="tip">提示</string>
    <string name="exit_confirm">是否退出程序？</string>
    <string name="exit">退出</string>
    <string name="once_again_exit">再按一次退出</string>
    <string name="weather_live">生活气象</string>
    <string name="weather_product">监测预报</string>
    <string name="weather_service">专项服务</string>
    <string name="warning_center">预警中心</string>
    <string name="realtime_query">实况查询</string>
    <string name="air_quality">空气质量</string>
    <string name="map_forecast">指点天气</string>
    <string name="map_forecast2">指点\n天气</string>
    <string name="lightning_monitor">闪电定位</string>
    <string name="decision_weather">决策报告</string>
    <string name="near_report">临近报告</string>
    <string name="get_detail_error">获取详情失败</string>
    <string name="init_error">初始化失败</string>
    <string name="versionname">v</string>
    <string name="set">设置</string>
    <string name="customization">定制</string>
    <string name="auto_location">自动定位城市</string>
    <string name="settime">设置时间</string>
    <string name="typhoon_path">台风路径</string>
    <string name="locating">位置：</string>
    <string name="careaboutasdescribed_1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;天津惠民客户端由</string>
    <string name="careaboutasdescribed_2">权威打造，为决策、专业、行业气象服务用户提供实时天气预报、气象预警信息，以及风雨查询、台风路径、气象雷达、专项服务等专业功能。</string>
    <string name="empty_promess_service">输入的手机号无“专项服务”栏目使用权限，如需订阅，请联系当地气象部门！</string>
    <string name="promess_service_intro">请先登录，才能访问专项服务产品。了解专项服务栏目，请查阅帮助信息！</string>
    <string name="autoshareweather">天气信息预览</string>
    <string name="autosharecity">分享城市：</string>
    <string name="autosharetime">自动分享时间</string>
    <string name="autosharestate">自动分享状态</string>
    <string name="autosharexina">新浪微博</string>
    <string name="autosharetencent">腾讯微博</string>
    <string name="autosharebundle">请绑定</string>
    <string name="autosharenobundle">没有绑定微博则不发布</string>
    <string name="autosharenobundletime">设置分享时间后，分享天气前会自动更新时间。</string>
    <string name="mz_content">\t1、 “天津惠民”提供的天气预报信息产品服务仅供用户作为生活、生产等活动的参考信息，用户据此作出的行为及所产生的后果与“天津惠民”及其关联的单位无关。 \n\t2、 由于不可抗力或互联网传输原因等造成信息传播的延迟、中断和缺失，“天津惠民”不承担任何责任。因不可预测或无法控制的系统故障、设备故障、通讯故障等原因给用户造成损失的，“天津惠民”不承担任何的赔偿责任。 \n\t3、 “天津惠民”努力给用户提供及时、准确的天气信息产品服务，但不承担因预报准确率原因引起的任何损失、损害。您在使用“天津惠民”时可能产生的GPRS流量资费各地不同，由当地运营商收取。 \n\t4、“天津惠民”提供的所有数据仅供参考，不具备法律效力，不得挪为他用。 \n\t5、 本声明的最终解释权归“天津惠民”所有。 \n\t 以上风险提示，您已阅读并理解，如果继续使用，即表明您同意承担使用“天津惠民”所有服务可能存在的风险。 </string>
    <string name="feedback_eidtdesc">登录并绑定手机号码，就可以发布您的建议啦！</string>
    <string name="feedback_eidtemail">请输入您的手机号码或账号</string>
    <string name="submit">提交</string>
    <string name="reset">重置</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="pushcity">推送城市:</string>
    <string name="custom_pushcity">定制城市:</string>
    <string name="pushmodel">当前展示样式：</string>
    <string name="current_default_push_city">当前默认城市：</string>
    <string name="first">第一次</string>
    <string name="second">第二次</string>
    <string name="thrid">第三次</string>
    <string name="weatherwarnpush">天气预报推送</string>
    <string name="redwarn">红色预警</string>
    <string name="orangewarn">橙色预警</string>
    <string name="yellowwarn">黄色预警</string>
    <string name="bluewarn">蓝色预警</string>
    <string name="removeweatherwarn">解除类气象预警</string>
    <string name="warncity">告警城市：</string>
    <string name="temperature">气温</string>
    <string name="temperature_sign">气温\n(°C)</string>
    <string name="mvisibility">能见度</string>
    <string name="visibility_sign">能见度\n(m)</string>
    <string name="humidity">湿度</string>
    <string name="timerain">本时次雨量</string>
    <string name="rain">雨量</string>
    <string name="high_temp">高温</string>
    <string name="low_temp">低温</string>
    <string name="wind">风况</string>
    <string name="windspeed">风速</string>
    <string name="windspeed_sign">风速\n(m/s)</string>
    <string name="windspeed_sign_">风速m/s</string>
    <string name="wind_direction">风向</string>
    <string name="air_presure_sign">气压\n(hPa)</string>
    <string name="mvisibility_">能见度:</string>
    <string name="humidity_">湿度:</string>
    <string name="humidity_relatively">相对\n湿度</string>
    <string name="timerain_">今日降雨量:</string>
    <string name="windspeed_">风速:</string>
    <string name="hight">高于</string>
    <string name="low">低于</string>
    <string name="temperaturenum">°C</string>
    <string name="km">m</string>
    <string name="mm">mm</string>
    <string name="ms">m/s</string>
    <string name="per">%</string>
    <string name="per_sign">(%)</string>
    <string name="loading">正在加载...</string>
    <string name="refreshing">正在刷新...</string>
    <string name="loading_more">加载更多</string>
    <string name="refresh">更新</string>
    <string name="refresh_pulldown">下拉刷新</string>
    <string name="rain_chart2">全省自动站降雨量分级统计</string>
    <string name="rain_rank1">全省近24小时内最大雨量排名</string>
    <string name="rain_rank2">全省近1、3小时最大雨量排名</string>
    <string name="no_data">暂无数据</string>
    <string name="traffic_weather">交通气象</string>
    <string name="agriculture_weather">农业气象</string>
    <string name="decision_introduce">决策报告简介</string>
    <string name="industry_introduce">行业气象简介</string>
    <string name="near_introduce">临近预报简介</string>
    <string name="unclassified">未分类</string>
    <string name="text_repwd_req">确认密码:</string>
    <string name="text_curr_pwd">当前密码:</string>
    <string name="text_new_pwd">新&#160;&#160;密&#160;&#160;码:</string>
    <string name="text_re_update">确认修改</string>
    <string name="forgetpwd">忘记密码请联系为您开通服务权限的专项服务单位。</string>
    <string name="init_password">初始密码：123456。请及时修改密码。忘记密码请联系为您开通专项服务权限的气象服务单位。</string>
    <string name="password_help">请到“帮助”页面，查阅使用说明，修改密码。</string>
    <string name="text_ztq_tips">天津惠民提示</string>
    <string name="unlogin">未登录</string>
    <string name="text_change_pwd_tips">您尚未登录，无法修改密码。</string>
    <string name="text_authority_tips">您的手机号无本“专项服务”栏目使用权限，如需开通，请查阅帮助信息！</string>
    <string name="text_islogin_tips">请先登录，才能访问专项服务产品。了解专项服务栏目，请查阅帮助信息！</string>
    <string name="input_tips_mobile">请输入手机号或者账号</string>
    <string name="input_tips_pwd">请输入密码</string>
    <string name="input_tips_curr_pwd">请输入当前密码</string>
    <string name="input_tips_new_pwd">请输入新密码</string>
    <string name="input_tips_re_pwd">请再次输入密码</string>
    <string name="input_tips_photo">请输入您的描述（可选）</string>
    <string name="time">时间</string>
    <string name="weather_situation">天气\n现象</string>
    <string name="rainfall">降雨量</string>
    <string name="rainfall_sign">降雨量\n(mm)</string>
    <string name="rainfall_sign_">雨量mm</string>
    <string name="rainfall_2014">2014年月降水量</string>
    <string name="weather">天气</string>
    <string name="life_number">生活指数</string>
    <string name="feature_weather">未来6小时逐时预报</string>
    <string name="please_wait">请等待...</string>
    <string name="wait_data">数据加载中，请稍候......</string>
    <string name="checkcity_hinttext">搜索气象服务提供单位</string>
    <string name="helpacitvity">帮助</string>
    <string name="more">更多</string>
    <string name="hour_forecast_36">36小时逐时预报</string>
    <string name="dialog_default_title">天津惠民提示</string>
    <string name="search_no_result">对不起，没有搜索到相关数据</string>
    <string name="search_error">搜索出错</string>
    <string name="search_net_error">搜索失败,请检查网络连接</string>
    <string name="weatherserve_info">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;天津惠民客户端的“专项服务栏目”，涵盖了天津市各级气象单位发布的决策气象服务、行业气象服务、临近预报服务，满足各地不同的专业、专项气象用户群体和决策用户对气象信息服务的个性化、专业化需求以及日常政务办公需求。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;为保障专项服务信息的合法、合理使用，本栏目对登录用户进行授权管理，未经天津市各级气象单位授权的用户，无法获取专项服务的详细内容。详细的管理办法查阅《关于专项服务产品的使用权限》。</string>
    <string name="weather_product_authority_info">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;为保障专项服务信息的合法、合理使用，本栏目对登录用户进行严格的权限管理，未经天津市各级气象单位授权的用户，无法获取服务的详细内容。权限获取及使用说明如下：\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;1.权限获取：需求人需向所在单位/企业，提交授权申请。需求人信息由所在企业的专项负责人统一向建立合作关系的气象部门专职负责人提供，包括所在单位/企业的个人职务、姓名、联系电话等信息，由当地气象部门核实、由气象部门管理人员在专门的管理平台进行权限的授权操作，并由气象部门向所在单位正式通知开通情况及账号信息。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;2.权限范围：用户权限由所属单位/企业界定，气象部门依据合作关系进行权限的授权操作。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;3.权限使用：用户初次登录本客户端“专项服务栏目”时，请点击“未登录”按钮，根据由气象部门正式提供的用户信息和密码，完成栏目登录操作,，方可使用授权范围内的专项服务产品。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4.权限变更：包括权限范围的调整、取消，均由所在单位/企业提交当地气象部门，由气象部门核实后，进行权限变更的操作。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;5.密码的使用：气象部门提供的密码为统一的初始密码，为保障您的专项服务权限不被盗用，请及时修改为安全度更高的个人密码。密码为6-15位。\n</string>
    <string name="decision_content">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;天津市决策专项服务系统是为各级党政军领导和决策部门指挥生产、组织防灾减灾，以及在资源合理开发利用和环境保护等方面进行科学决策提供气象信息。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本系统涵盖重大气象灾害性天气信息、重大节假日气象信息等方面的气象信息，具有信息丰富、更新迅速、针对性强等特点。</string>
    <string name="aqi">AQI</string>
    <string name="air_city_name">天津总体</string>
    <string name="air_time">2015-01-01 00:00 更新</string>
    <string name="zero_time">00:00</string>
    <string name="air_better">排名第1位>></string>
    <string name="health_tip">健康提示</string>
    <string name="monitor_detail">监测细项情况</string>
    <string name="history_query">历史查询</string>
    <string name="query">查询</string>
    <string name="temp_number">0</string>
    <string name="temp_city">福州</string>
    <string name="air_what_aqi">空气质量指数（Air Quality Index，简称AQI）是每日定量描述空气质量状况的参数。AQI共分六级。指数越大、级别越高，说明污染的情况越严重，对人体的健康危害也就越大。一级：0-50。空气质量优，用绿色表示。空气质量令人满意，基本无污染，各类人群可正常活动。二级：51-100。空气质量良，用黄色表示。空气质量可接受，但某些污染物可能对极少数异常敏感人群健康有较弱影响。三级：101-150。轻微污染，用橙色表示。易感人群症状有轻度加剧，健康人群出现刺激症状，心脏病和呼吸系统疾病患者应减少体力消耗和户外活动。四级：151-200。中度污染，用红色表示。进一步加剧易感人群症状，可能对健康人群心脏、呼吸系统有影响。五级：201-300。重度污染，用紫色表示。心脏病和肺病患者症状显著加剧，运动耐受力降低，健康人群中普遍出现症状。老年人和心肝病、肺病患者应减少体力活。六级：301-500。严重污染，用褐红色表示。健康人运动耐受力降低，有明显强烈症状，提前出现某些疾病。老年人和病人应当留在室内，避免体力消耗，一般人群应尽量减少户外活动。</string>
    <string name="no_picture">暂无图片，快点发图吧！</string>
    <string name="picture_not_exists">图片文件不存在</string>
    <string name="choice_typhoon">选择台风</string>
    <string name="image_example">图例</string>
    <string name="measure_distance">测距</string>
    <string name="map_switch">地图切换</string>
    <string name="competition_limit_1">限：年龄27周岁以下 男女不限</string>
    <string name="competition_limit_2">&#160;&#160;&#160;&#160;&#160;&#160;&#160;本科以上学历[含应届毕业生]</string>
    <string name="competition_limit_3">&#160;&#160;&#160;&#160;&#160;&#160;&#160;2015年3月13日起至5月1日</string>
    <string name="competition_content_1">【播出平台】</string>
    <string name="competition_content_2">福建电视台都市时尚频道</string>
    <string name="competition_content_3">【节目时段】</string>
    <string name="competition_content_4">首播：周一至周四 19:00\n重播：次日11:30</string>
    <string name="competition_content_5">【播出时间】</string>
    <string name="competition_content_6">近期火热播出</string>
    <string name="competition_content_7">【节目简介】</string>
    <string name="competition_content_8">这是一档平民真人秀节目，节目将选取168名选手参与，围绕“气象我主播，天气我来秀”这一主题，通过初赛、晋级赛、复活赛、决赛形式决出总冠军、亚军、季军，可享受奖金、聘书和气象节目主持人、都市时尚频道主播、中国网高端访谈主持人岗位。</string>
    <string name="competition_entry">我要报名</string>
    <string name="phone_hint">请输入已注册的手机号码或账号</string>
    <string name="password_hint">请输入您的密码</string>
    <string name="login">登录</string>
    <string name="register_now">新用户？现在注册</string>
    <string name="login_other_way">第三方账号登录：</string>
    <string name="ztq_hint">天津惠民提醒</string>
    <string name="ztp_hint_content">注册或者授权天津惠民使用您的第三方账户登录，即表示您已经阅读并同意</string>
</resources>