<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/disaster_reprot_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/btn_disaster_time"
            android:drawableRight="@drawable/bg_livequery_drowdown_small"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_margintop"
            android:paddingRight="@dimen/dimen4"
            android:paddingTop="@dimen/activity_margintop"
            android:text="所有灾情"
            android:textColor="@color/text_black"
            android:textSize="13dp"/>

        <View
            android:layout_width="5px"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/disaster_reprot_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/btn_disaster_time"
            android:drawableRight="@drawable/bg_livequery_drowdown_small"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_margintop"
            android:paddingRight="@dimen/dimen4"
            android:paddingTop="@dimen/activity_margintop"
            android:text="所有状态"
            android:textColor="@color/text_black"
            android:textSize="13dp"/>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/disaster_reprot_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@drawable/btn_disaster_time"
            android:drawableRight="@drawable/bg_livequery_drowdown_small"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_margintop"
            android:paddingRight="@dimen/dimen4"
            android:paddingTop="@dimen/activity_margintop"
            android:text="发布时间"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_footnote"/>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/disaster_search_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="3"
            android:background="@drawable/btn_livequery_commom"
            android:paddingBottom="@dimen/activity_margintop"
            android:paddingTop="@dimen/activity_margintop"
            android:singleLine="true"
            android:text="@string/query"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_footnote"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_search_retult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_black_common"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_report_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_gray_light">

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/line_common_v"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_margintop"
            android:paddingTop="@dimen/activity_margintop"
            android:text="发布时间"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_footnote"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/line_common_v"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_margintop"
            android:paddingTop="@dimen/activity_margintop"
            android:text="地点"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_footnote"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/line_common_v"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_margintop"
            android:paddingTop="@dimen/activity_margintop"
            android:text="审核状态"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_footnote"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/line_common_v"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_margintop"
            android:paddingTop="@dimen/activity_margintop"
            android:text="详情"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_footnote"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/line_common_v"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_disaster_report"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_white"
        android:cacheColorHint="@color/alpha100"
        android:divider="@drawable/line_common"
        android:footerDividersEnabled="true"
        android:listSelector="@color/alpha100"/>

    <LinearLayout
        android:id="@+id/lay_resptor_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8"
                android:text="请登录天津气象后查询:"
                android:textColor="@color/text_blue_login"
                android:textSize="@dimen/text_content"/>

        </LinearLayout>
        <!-- 账号 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_login_input"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen8"
            android:paddingRight="@dimen/dimen8">

            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/icon_login_phone"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/et_disaster_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen8"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/phone_hint"
                android:singleLine="true"
                android:textColor="@color/text_black_login"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/text_content"/>

            <ImageButton
                android:id="@+id/btn_disaster_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_clear_input"/>
        </LinearLayout>

        <!-- 密码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            android:background="@drawable/bg_login_input"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen8"
            android:paddingRight="@dimen/dimen8">

            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/icon_login_password"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/et_disaster_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen8"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:maxLength="16"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/text_black_login"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/text_content"/>

            <ImageButton
                android:id="@+id/btn_clear_disaster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_clear_input"/>
        </LinearLayout>

        <!-- 找回密码、修改密码 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8">


        </RelativeLayout>

        <!-- 登录按钮 -->
        <Button
            android:id="@+id/btn_disaster_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            android:background="@drawable/btn_login_02"
            android:text="@string/login"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_content"/>

        <!-- 注册 -->
        <TextView
            android:id="@+id/tv_disaster_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dimen8"
            android:drawablePadding="@dimen/dimen4"
            android:drawableRight="@drawable/icon_arrow_blue"
            android:text="@string/register_now"
            android:textColor="@color/text_blue_login"
            android:textSize="@dimen/text_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/dimen8"
            android:orientation="vertical">

            <!-- 第三方登录提醒 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8"
                android:text="@string/login_other_way"
                android:textColor="@color/text_blue_login"
                android:textSize="@dimen/text_content"/>

            <!-- 第三方登录按钮 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen16"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_disaster_weixin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_login_weixin"/>

                <ImageButton
                    android:id="@+id/btn_disaster_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen40"
                    android:layout_marginRight="@dimen/dimen40"
                    android:background="@drawable/icon_login_qq"/>

                <ImageButton
                    android:id="@+id/btn_disaster_sina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_login_sina"/>
            </LinearLayout>

            <!-- 知天气提醒 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen16"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/line_orange"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen20"
                    android:layout_marginRight="@dimen/dimen20"
                    android:text="@string/ztq_hint"
                    android:textColor="@color/text_black_common"
                    android:textSize="@dimen/text_content"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/line_orange"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen8"
                android:text="@string/ztp_hint_content"
                android:textColor="@color/text_black_common"
                android:textSize="@dimen/text_content"
                android:visibility="invisible"/>

            <!-- 许可协议超链接 -->
            <TextView
                android:id="@+id/tv_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/text_content"
                android:visibility="invisible"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>


